influxdb3-plugin-cli/tests/snapshots/index_smoke__index_info_filtered_out_json.snap
---
source: influxdb3-plugin-cli/tests/index_smoke.rs
expression: doc
---
{
  "result": {
    "name": "legacy_rollup",
    "outcome": "filtered_out",
    "reasons": [
      {
        "kind": "yanked"
      }
    ],
    "version": null
  },
  "status": "ok"
}
