influxdb3-plugin-cli/tests/snapshots/index_smoke__index_info_not_found_json.snap
---
source: influxdb3-plugin-cli/tests/index_smoke.rs
expression: missing_name
---
{
  "result": {
    "name": "no_such_plugin",
    "outcome": "not_found",
    "version": null
  },
  "status": "ok"
}
